@@ -9,3 +9,6 @@
 07 JUN 2023 - 00:06 - Version 4a
 - Made a change that will hopefully resolve the safari display issues. I am tired and don't have safari on the machine I'm working on so I'm going to bed and I'll find out if the problem has been resolved tomorrow.
 - It still doesn't work on safari. I'll do some research tomorrow but if by some cosmic grace you're reading this and know why this doesn't work on safari at the moment I would greatly appreciate your input.
+07 JUN 2023 - 10:40 - Version 5
+- Main vertical layout no longer uses flexbox, in a final effort to try and fix the safari compatibility issues.
+- Time display cluster now sticks to the top of the page, in case you are generating enough laps to require scrolling through them. Good luck on your marathon or whatever.
